Fix source locations when trim-paths is being used
 - Add lit test for it:
   $ litcheck lit run --path bin tests/lit/source-location/
 - Add HIR serialization in form of text

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -335,6 +335,7 @@ args = [
     "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/bin",
     "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/tests/lit/parse",
     "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/tests/lit/wasm-translation",
+    "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/tests/lit/source-location",
 ]
 dependencies = ["litcheck"]
 
