--- a/midenc-compile/Cargo.toml
+++ b/midenc-compile/Cargo.toml
@@ -26,6 +26,7 @@ std = [
 ]
 
 [dependencies]
+anyhow.workspace = true
 clap = { workspace = true, optional = true }
 log.workspace = true
 inventory.workspace = true
