refactor: migrate to WIT generation macro in counter-contract example,
run `cargo update`, update miden-node to v0.12.2 in the local network tests.

--- a/examples/counter-contract/Cargo.toml
+++ b/examples/counter-contract/Cargo.toml
@@ -12,8 +12,8 @@ crate-type = ["cdylib"]
 [dependencies]
 miden = { path = "../../sdk/sdk" }
 
-# [package.metadata.component]
-# package = "miden:counter-contract"
+[package.metadata.component]
+package = "miden:counter-contract"
 
 [package.metadata.miden]
 project-kind = "account"
