--- a/Makefile.toml
+++ b/Makefile.toml
@@ -182,7 +182,7 @@ args = [
     "midenc",
     "--artifact-dir",
     "${MIDENC_BIN_DIR}",
-    "@@split(CARGO_MAKE_TASK_ARGS, )",
+    "@@split(CARGO_MAKE_TASK_ARGS, ;)",
 ]
 
 [tasks.cargo-miden]
@@ -197,7 +197,7 @@ args = [
     "cargo-miden",
     "--artifact-dir",
     "${MIDENC_BIN_DIR}",
-    "@@split(CARGO_MAKE_TASK_ARGS, )",
+    "@@split(CARGO_MAKE_TASK_ARGS, ;)",
 ]
 
 [tasks.build]
