chore: add test for 5-felt struct triggering a spill issue

--- a/felt-repr/tests/Cargo.toml
+++ b/felt-repr/tests/Cargo.toml
@@ -20,6 +20,7 @@ miden-core.workspace = true
 miden-integration-tests = { path = "../../tests/integration" }
 midenc-frontend-wasm.workspace = true
 midenc-session.workspace = true
+midenc-expect-test.workspace = true
 miden-debug.workspace = true
 miden-lib.workspace = true
 miden-processor.workspace = true
