feat: update counter-contract example with #[miden-test]
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/examples/counter-contract/Cargo.toml
+++ b/examples/counter-contract/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 miden = { path = "../../sdk/sdk" }
+miden-test-harness-macros = { path = "../../test-harness/test-harness-macros"}
 
 [package.metadata.component]
 package = "miden:counter-contract"
