--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,7 +2,7 @@
 # REMINDER: After updating the channel, update:
 # - docs/src/usage/cargo-miden.md
 # - docs/src/usage/midenc.md
-channel = "nightly-2025-07-20"
-components = ["rustfmt", "rust-src", "clippy"]
+channel = "nightly-2025-12-10"
+components = ["rustfmt", "rust-src", "clippy", "rust-analyzer"]
 targets = ["wasm32-unknown-unknown", "wasm32-wasip1", "wasm32-wasip2"]
 profile = "minimal"
