feat: re-export miden-mast-package and miden-objects via test-harness-lib
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/examples/counter-contract/Cargo.toml
+++ b/examples/counter-contract/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 miden = { path = "../../sdk/sdk" }
 miden-test-harness-macros = { path = "../../test-harness/test-harness-macros"}
+miden-test-harness-lib = { path = "../../test-harness/test-harness-lib"}
 
 [package.metadata.component]
 package = "miden:counter-contract"
