feat: use custom test harness
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/examples/counter-contract/Cargo.toml
+++ b/examples/counter-contract/Cargo.toml
@@ -20,3 +20,8 @@ package = "miden:counter-contract"
 [package.metadata.miden]
 project-kind = "account"
 supported-types = ["RegularAccountUpdatableCode"]
+
+[[test]]
+name = "lib"
+path = "src/lib.rs"
+harness = false
