--- a/felt-repr/tests/Cargo.toml
+++ b/felt-repr/tests/Cargo.toml
@@ -24,3 +24,4 @@ midenc-expect-test.workspace = true
 miden-debug.workspace = true
 miden-lib.workspace = true
 miden-processor.workspace = true
+temp-dir = "0.1"
