--- a/test-harness/test-harness-lib/Cargo.toml
+++ b/test-harness/test-harness-lib/Cargo.toml
@@ -11,6 +11,9 @@ license.workspace = true
 readme.workspace = true
 edition.workspace = true
 
+[lib]
+path = "src/mod.rs"
+
 [dependencies]
 libtest-mimic = "0.8.1"
 miden-objects = "0.12.4"
