--- a/felt-repr/derive/Cargo.toml
+++ b/felt-repr/derive/Cargo.toml
@@ -8,7 +8,7 @@ repository.workspace = true
 categories.workspace = true
 keywords.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 edition.workspace = true
 
 [lib]
