refactor: move `felt-repr` crates under `sdk` folder,
re-export `miden_felt_repr_onchain` as `felt_repr` in `miden` crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ members = [
     "codegen/*",
     "dialects/*",
     "eval",
-    "felt-repr/*",
     "frontend/*",
     "hir",
     "hir-analysis",
@@ -16,7 +15,13 @@ members = [
     "midenc-compile",
     "midenc-driver",
     "midenc-session",
-    "sdk/*",
+    "sdk/felt-repr/*",
+    "sdk/alloc",
+    "sdk/base",
+    "sdk/base-macros",
+    "sdk/base-sys",
+    "sdk/sdk",
+    "sdk/stdlib-sys",
     "tools/*",
     "tests/integration",
     "tests/integration-node",
