--- a/tests/integration-node/Cargo.toml
+++ b/tests/integration-node/Cargo.toml
@@ -17,7 +17,7 @@ fs2 = "0.4"
 miden-client = { version = "0.12", features = ["std", "tonic"] }
 miden-client-sqlite-store = { version = "0.12" }
 miden-core.workspace = true
-miden-felt-repr-offchain = { version = "0.7.1", path = "../../felt-repr/offchain" }
+miden-felt-repr-offchain = { version = "0.7.1", path = "../../sdk/felt-repr/offchain" }
 miden-mast-package.workspace = true
 miden-objects = { workspace = true, features = ["std"] }
 midenc-frontend-wasm.workspace = true
