--- a/midenc-compile/Cargo.toml
+++ b/midenc-compile/Cargo.toml
@@ -23,6 +23,7 @@ std = [
     "midenc-session/std",
     "dep:clap",
     "dep:wat",
+    "dep:wasmprinter",
 ]
 
 [dependencies]
@@ -41,3 +42,4 @@ midenc-hir-transform.workspace = true
 midenc-session.workspace = true
 thiserror.workspace = true
 wat = { workspace = true, optional = true }
+wasmprinter = { workspace = true, optional = true }
