refactor: move `felt-repr` crates to the separate folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "codegen/*",
     "dialects/*",
     "eval",
+    "felt-repr/*",
     "frontend/*",
     "hir",
     "hir-analysis",
