refactor: make `OutputTypeSpec::Inter` into `OutputTypeSpec::Subset`

--- a/midenc-session/Cargo.toml
+++ b/midenc-session/Cargo.toml
@@ -38,6 +38,7 @@ miden-stdlib.workspace = true
 midenc-hir-symbol.workspace = true
 midenc-hir-macros.workspace = true
 miden-lib.workspace = true
+smallvec.workspace = true
 parking_lot = { workspace = true, optional = true }
 termcolor = { version = "1.4.1", optional = true }
 thiserror.workspace = true
