--- a/tests/integration-node/Cargo.toml
+++ b/tests/integration-node/Cargo.toml
@@ -14,7 +14,7 @@ publish = false
 [dependencies]
 anyhow.workspace = true
 fs2 = "0.4"
-miden-client = { version = "0.12", features = ["std", "tonic"] }
+miden-client = { version = "0.12", features = ["std", "tonic", "testing"] }
 miden-client-sqlite-store = { version = "0.12" }
 miden-core.workspace = true
 miden-felt-repr-offchain = { version = "0.7.1", path = "../../sdk/felt-repr/offchain" }
