--- a/tests/integration-node/Cargo.toml
+++ b/tests/integration-node/Cargo.toml
@@ -17,6 +17,7 @@ fs2 = "0.4"
 miden-client = { version = "0.12", features = ["std", "tonic", "testing"] }
 miden-client-sqlite-store = { version = "0.12" }
 miden-core.workspace = true
+miden-lib = { version = "0.12" }
 miden-felt-repr-offchain = { version = "0.7.1", path = "../../sdk/felt-repr/offchain" }
 miden-mast-package.workspace = true
 miden-objects = { workspace = true, features = ["std"] }
