--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "midenc-driver",
     "midenc-session",
     "sdk/felt-repr/*",
+    "sdk/felt",
     "sdk/alloc",
     "sdk/base",
     "sdk/base-macros",
