--- a/sdk/felt-repr/offchain/Cargo.toml
+++ b/sdk/felt-repr/offchain/Cargo.toml
@@ -15,8 +15,8 @@ edition.workspace = true
 crate-type = ["rlib"]
 
 [dependencies]
-miden-core.workspace = true
 miden-objects.workspace = true
+miden-felt-repr = { path = "../repr", version = "0.7.1" }
 miden-felt-repr-derive = { path = "../derive", version = "0.7.1" }
 
 [features]
