--- a/sdk/felt-repr/repr/Cargo.toml
+++ b/sdk/felt-repr/repr/Cargo.toml
@@ -16,6 +16,7 @@ crate-type = ["rlib"]
 
 [dependencies]
 miden-felt = { version = "0.8.0", path = "../../felt" }
+miden-felt-repr-derive = { path = "../derive", version = "0.7.1" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 miden-core.workspace = true
