--- a/sdk/felt-repr/repr/Cargo.toml
+++ b/sdk/felt-repr/repr/Cargo.toml
@@ -20,6 +20,7 @@ miden-felt-repr-derive = { path = "../derive", version = "0.7.1" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 miden-core.workspace = true
+miden-objects.workspace = true
 
 [features]
 default = []
