--- a/sdk/sdk/Cargo.toml
+++ b/sdk/sdk/Cargo.toml
@@ -19,7 +19,7 @@ miden-sdk-alloc = { version = "0.8.0", path = "../alloc" }
 miden-stdlib-sys = { version = "0.8.0", path = "../stdlib-sys" }
 miden-base = { version = "0.8.0", path = "../base" }
 miden-base-sys = { version = "0.8.1", path = "../base-sys" }
-miden-felt-repr-onchain = { version = "0.7.1", path = "../felt-repr/onchain" }
+miden-felt-repr = { version = "0.7.1", path = "../felt-repr/repr" }
 miden-felt = { version = "0.8.0", path = "../felt" }
 wit-bindgen = { version = "0.46", default-features = false, features = ["macros"] }
 
