--- a/tests/integration-network/Cargo.toml
+++ b/tests/integration-network/Cargo.toml
@@ -15,7 +15,7 @@ publish = false
 miden-client = { version = "0.12", features = ["std", "tonic", "testing"] }
 miden-core.workspace = true
 miden-lib = { version = "0.12" }
-miden-felt-repr-offchain = { version = "0.7.1", path = "../../sdk/felt-repr/offchain" }
+miden-felt-repr = { version = "0.7.1", path = "../../sdk/felt-repr/repr" }
 miden-mast-package.workspace = true
 miden-objects = { workspace = true, features = ["std"] }
 midenc-frontend-wasm.workspace = true
