Add debug variable location tracking to HIR and MASM
This commit adds debug information support for tracking
variable locations through the compilation pipeline:

- Add debug info representation on HIR level (builtin.dbg_value ops,
  DIExpression, DILocalVariable attributes)
- Handle DebugVars during lowering from HIR to MASM
- Add DebugInfoBuilder for constructing debug metadata
- Add RemoveDeadDebugOps pass to clean up debug ops with dead operands
- Add miden-debugdump tool for inspecting .debug_info sections in MASP
  packages (similar to llvm-dwarfdump)
- Add documentation for the debug info format (docs/DebugInfoFormat.md,
  docs/DebugInfoMetadata.md)
- Add lit tests for debug functionality

Run tests:
$ litcheck lit run --verbose tests/lit/debugdump
$ litcheck lit run --path bin ./tests/lit/debug/

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -336,6 +336,7 @@ args = [
     "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/tests/lit/parse",
     "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/tests/lit/wasm-translation",
     "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/tests/lit/source-location",
+    "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/tests/lit/debugdump",
 ]
 dependencies = ["litcheck"]
 
