fix: rewrite uses of spilled values in any nested regions of `op`.
This is required for correctness when spills/reloads are inserted into regions nested under a
CFG block (e.g. structured control flow like `scf.if`), as those uses are otherwise ignored by
the current CFG rewrite pass.

--- a/dialects/hir/Cargo.toml
+++ b/dialects/hir/Cargo.toml
@@ -25,5 +25,6 @@ midenc-hir-transform.workspace = true
 
 [dev-dependencies]
 # Use local paths for dev-only dependency to avoid relying on crates.io during packaging
+midenc-dialect-scf.workspace = true
 midenc-expect-test = { path = "../../tools/expect-test" }
 env_logger.workspace = true
