fix: gate `sdk` Wasm intrinsics behind `cfg(miden)`
`miden-felt` should only use the `f32` ABI when it is built by `cargo-miden`.
For regular workspace builds (including the `sdk` crates targeting Wasm), it
must stay `miden-core`-backed, and `cargo check --release --all-features` must
still succeed.

This gates `miden-stdlib-sys` intrinsics on `cfg(miden)`, wires up the cfg in
`miden-stdlib-sys`'s build script, and propagates `--cfg miden` from
`cargo-miden` so Cargo can correctly resolve cfg-based dependencies.

--- a/sdk/felt/Cargo.toml
+++ b/sdk/felt/Cargo.toml
@@ -21,8 +21,8 @@ crate-type = ["rlib"]
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 miden-core.workspace = true
 
-[target.'cfg(target_family = "wasm")'.dependencies]
-miden-core = { workspace = true, optional = true }
+[target.'cfg(all(target_family = "wasm", not(miden)))'.dependencies]
+miden-core.workspace = true
 
 [features]
 default = []
