review: rename miden-test-harness-lib -> miden-test-harness
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/examples/counter-contract/Cargo.toml
+++ b/examples/counter-contract/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 miden = { path = "../../sdk/sdk" }
 miden-test-harness-macros = { path = "../../test-harness/test-harness-macros"}
-miden-test-harness-lib = { path = "../../test-harness/test-harness-lib"}
+miden-test-harness = { path = "../../test-harness/test-harness-lib"}
 
 [dev-dependencies]
 miden-objects = { version = "0.12", default-features = false }
