--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,7 +151,7 @@ midenc-session = { version = "0.5.1", path = "midenc-session" }
 cargo-miden = { version = "0.5.1", path = "tools/cargo-miden" }
 miden-integration-tests = { path = "tests/integration" }
 midenc-expect-test = { path = "tools/expect-test" }
-miden-test-harness-lib = { path = "test-harness/test-harness-lib" }
+miden-test-harness = { path = "test-harness/test-harness-lib" }
 miden-test-harness-macros = { path = "test-harness/test-harness-macros" }
 
 [patch.crates-io]
