--- a/test-harness/test-harness-lib/Cargo.toml
+++ b/test-harness/test-harness-lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "miden-test-harness-lib"
+name = "miden-test-harness"
 description = "Custom testing harness used in rust code targetting the miden compiler."
 version.workspace = true
 rust-version.workspace = true
