feat: include both test registration and declaration inside a single cfg[test] block
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/test-harness/test-harness-lib/Cargo.toml
+++ b/test-harness/test-harness-lib/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/mod.rs"
 libtest-mimic = "0.8.1"
 inventory.workspace = true
 clap.workspace = true
+cfg-if = "0.1"
 
 # Miden dependencies
 miden-test-harness-macros.workspace = true
