--- a/sdk/felt-repr/repr/Cargo.toml
+++ b/sdk/felt-repr/repr/Cargo.toml
@@ -15,7 +15,7 @@ edition.workspace = true
 crate-type = ["rlib"]
 
 [dependencies]
-miden-felt = { version = "0.8.0", path = "../../felt" }
+miden-field = { version = "0.8.0", path = "../../field" }
 miden-felt-repr-derive = { path = "../derive", version = "0.7.1" }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
