--- a/sdk/felt-repr/tests/Cargo.toml
+++ b/sdk/felt-repr/tests/Cargo.toml
@@ -13,7 +13,7 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-miden-felt = { path = "../../felt", version = "0.8.0" }
+miden-field = { path = "../../field", version = "0.8.0" }
 miden-felt-repr = { path = "../repr", version = "0.7.1" }
 miden-core.workspace = true
 
