fix: publish = false in test harness
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/test-harness/test-harness-macros/Cargo.toml
+++ b/test-harness/test-harness-macros/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "miden-test-harness-macros"
 description = "Macros used to aid in test writing."
+publish = false
 version.workspace = true
 rust-version.workspace = true
 authors.workspace = true
