--- a/test-harness/test-harness-lib/Cargo.toml
+++ b/test-harness/test-harness-lib/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "miden-test-harness"
 description = "Custom testing harness used in rust code targetting the miden compiler."
+publish = false
 version.workspace = true
 rust-version.workspace = true
 authors.workspace = true
