fix: handle over-K `scf.yield` in `SpillAnalysis`

--- a/hir-analysis/Cargo.toml
+++ b/hir-analysis/Cargo.toml
@@ -21,5 +21,6 @@ midenc-hir.workspace = true
 midenc-dialect-hir = { path = "../dialects/hir" }
 midenc-dialect-arith = { path = "../dialects/arith" }
 midenc-dialect-cf = { path = "../dialects/cf" }
+midenc-dialect-scf = { path = "../dialects/scf" }
 midenc-expect-test = { path = "../tools/expect-test" }
 env_logger.workspace = true
