--- a/sdk/base-sys/Cargo.toml
+++ b/sdk/base-sys/Cargo.toml
@@ -16,6 +16,7 @@ build = "build.rs"
 links = "miden_base_sys_stubs"
 
 [dependencies]
+miden-protocol.workspace = true
 miden-stdlib-sys = { version = "0.8.0", path = "../stdlib-sys" }
 miden-felt-repr = { version = "0.7.1", path = "../felt-repr/repr" }
 
