fix: drop `miden-protocol` from `miden-base*`
Replace storage slot indexing with a local `StorageSlotId` in `miden-base-sys`.
Move macro re-exports to `miden` so `miden-base` no longer pulls in proc-macros.

--- a/sdk/sdk/Cargo.toml
+++ b/sdk/sdk/Cargo.toml
@@ -18,6 +18,7 @@ crate-type = ["rlib"]
 miden-sdk-alloc = { version = "0.8.0", path = "../alloc" }
 miden-stdlib-sys = { version = "0.8.0", path = "../stdlib-sys" }
 miden-base = { version = "0.8.0", path = "../base" }
+miden-base-macros = { version = "0.8.0", path = "../base-macros" }
 miden-base-sys = { version = "0.8.1", path = "../base-sys" }
 miden-felt-repr = { version = "0.7.1", path = "../felt-repr/repr" }
 miden-field = { version = "0.8.0", path = "../field" }
