fix: `std` -> `miden::core` rename in stdlib

--- a/hir-symbol/src/symbols.toml
+++ b/hir-symbol/src/symbols.toml
@@ -122,9 +122,9 @@ note = {}
 output_note = {}
 faucet = {}
 rpo_falcon512 = {}
-std = {}
 tx = {}
 rpo = {}
 collections = {}
 smt = {}
 protocol = {}
+core = {}
