--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ log = "0.4"
 # Miden Dependencies
 miden-assembly = { version = "0.20", default-features = false }
 miden-core = { version = "0.20", default-features = false }
-miden-debug = { version = "0.4.1" }
+miden-debug = { version = "0.4.6" }
 miden-debug-types = { version = "0.20", default-features = false }
 miden-assembly-syntax = { version = "0.20", default-features = false }
 miden-formatting = { version = "0.1", default-features = false }
@@ -86,6 +86,7 @@ miden-standards = { version = "0.13", default-features = false }
 miden-processor = { version = "0.20", default-features = false }
 miden-core-lib = { version = "0.20", default-features = false }
 miden-mast-package = { version = "0.20", default-features = false }
+miden-testing = "0.13"
 miette = { package = "miden-miette", version = "7.1.1" }
 paste = "1.0"
 parking_lot = "0.12"
