--- a/test-harness/test-harness-macros/Cargo.toml
+++ b/test-harness/test-harness-macros/Cargo.toml
@@ -18,7 +18,7 @@ proc-macro = true
 [dependencies]
 # Miden dependencies
 miden-mast-package.workspace = true
-miden-testing = "0.13"
+miden-testing.workspace = true
 
 # External dependencies
 quote.workspace = true
