test(sdk): set up negative lit tests for macro expansion

--- a/tests/lit/lit.suite.toml
+++ b/tests/lit/lit.suite.toml
@@ -1,5 +1,5 @@
 name = "compiler"
-patterns = ["*.wat", "*.masm"]
+patterns = ["*.wat", "*.masm", "*.stderr"]
 
 [substitutions]
 "midenc" = "$$MIDENC_BIN_DIR/midenc"
