fix: rename stdlib's `rpo_falcon512` module to `falcon512_rpo`

--- a/hir-symbol/src/symbols.toml
+++ b/hir-symbol/src/symbols.toml
@@ -121,7 +121,7 @@ mem = {}
 note = {}
 output_note = {}
 faucet = {}
-rpo_falcon512 = {}
+falcon512_rpo = {}
 tx = {}
 rpo256 = {}
 collections = {}
