--- a/sdk/base-sys/Cargo.toml
+++ b/sdk/base-sys/Cargo.toml
@@ -17,7 +17,7 @@ links = "miden_base_sys_stubs"
 
 [dependencies]
 miden-stdlib-sys = { version = "0.8.0", path = "../stdlib-sys" }
-miden-felt-repr = { version = "0.7.1", path = "../felt-repr/repr" }
+miden-field-repr = { version = "0.7.1", path = "../field-repr/repr" }
 
 [features]
 default = []
